--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">FirebaseTestApplication</string>
+    <string name="registration_successful">Registration Successful</string>
+    <string name="register_user_error">Error occurred during registration</string>
+    <string name="not_all_data_filled_error">Please fill all the data</string>
+    <string name="login_text">Login</string>
+    <string name="sign_up_text">Sign Up</string>
 </resources>
