--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="not_all_data_filled_error">Please fill all the data</string>
     <string name="login_text">Login</string>
     <string name="sign_up_text">Sign Up</string>
+    <string name="register_text">Register</string>
+    <string name="login_user_error">Error occurred while logging in</string>
+    <string name="login_successful">Login successful</string>
 </resources>
